[gd_scene load_steps=44 format=3 uid="uid://dyf4voe8j4qtj"]

[ext_resource type="Texture2D" uid="uid://bcdlx4pj8d8jy" path="res://sprites/acolyte/horror.png" id="1_1kd1p"]
[ext_resource type="Script" path="res://scenes/enemies/cosmic_horror/cosmic_horror.gd" id="1_kvkq0"]
[ext_resource type="Script" path="res://scripts/common/hurtbox.gd" id="2_nbtsc"]
[ext_resource type="Script" path="res://scripts/common/health.gd" id="3_sbwjy"]
[ext_resource type="Script" path="res://scripts/common/fsm.gd" id="4_ios3j"]
[ext_resource type="Script" path="res://scenes/enemies/cosmic_horror/states/wander_state.gd" id="6_hpg0u"]
[ext_resource type="Script" path="res://scenes/enemies/cosmic_horror/states/chase_state.gd" id="7_06yk8"]
[ext_resource type="Script" path="res://scripts/common/hitbox.gd" id="8_2n6ja"]

[sub_resource type="AtlasTexture" id="AtlasTexture_wqslp"]
atlas = ExtResource("1_1kd1p")
region = Rect2(384, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_r4vuv"]
atlas = ExtResource("1_1kd1p")
region = Rect2(432, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_djq4r"]
atlas = ExtResource("1_1kd1p")
region = Rect2(480, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rx556"]
atlas = ExtResource("1_1kd1p")
region = Rect2(528, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dvdjr"]
atlas = ExtResource("1_1kd1p")
region = Rect2(576, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sxiop"]
atlas = ExtResource("1_1kd1p")
region = Rect2(624, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xg8ui"]
atlas = ExtResource("1_1kd1p")
region = Rect2(672, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fktkd"]
atlas = ExtResource("1_1kd1p")
region = Rect2(720, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_78du4"]
atlas = ExtResource("1_1kd1p")
region = Rect2(1008, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3bnbu"]
atlas = ExtResource("1_1kd1p")
region = Rect2(1056, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nlf6u"]
atlas = ExtResource("1_1kd1p")
region = Rect2(1104, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_msavn"]
atlas = ExtResource("1_1kd1p")
region = Rect2(1152, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8acr5"]
atlas = ExtResource("1_1kd1p")
region = Rect2(144, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bat87"]
atlas = ExtResource("1_1kd1p")
region = Rect2(192, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jglut"]
atlas = ExtResource("1_1kd1p")
region = Rect2(240, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wftnu"]
atlas = ExtResource("1_1kd1p")
region = Rect2(288, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hm8xo"]
atlas = ExtResource("1_1kd1p")
region = Rect2(336, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5jeul"]
atlas = ExtResource("1_1kd1p")
region = Rect2(1200, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vmfed"]
atlas = ExtResource("1_1kd1p")
region = Rect2(1248, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_t36am"]
atlas = ExtResource("1_1kd1p")
region = Rect2(1296, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rcbg2"]
atlas = ExtResource("1_1kd1p")
region = Rect2(1344, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7m2g6"]
atlas = ExtResource("1_1kd1p")
region = Rect2(1392, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bgyxe"]
atlas = ExtResource("1_1kd1p")
region = Rect2(768, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xqd2g"]
atlas = ExtResource("1_1kd1p")
region = Rect2(816, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_40ayu"]
atlas = ExtResource("1_1kd1p")
region = Rect2(864, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wbxx7"]
atlas = ExtResource("1_1kd1p")
region = Rect2(912, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ayrs3"]
atlas = ExtResource("1_1kd1p")
region = Rect2(960, 0, 48, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_pxjcu"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wqslp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r4vuv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_djq4r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rx556")
}],
"loop": true,
"name": &"attack",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dvdjr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sxiop")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xg8ui")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fktkd")
}],
"loop": true,
"name": &"attack_side",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_78du4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3bnbu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nlf6u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_msavn")
}],
"loop": true,
"name": &"attack_top",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8acr5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bat87")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jglut")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wftnu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hm8xo")
}],
"loop": true,
"name": &"idle",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5jeul")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vmfed")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t36am")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rcbg2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7m2g6")
}],
"loop": true,
"name": &"idle_side",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bgyxe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xqd2g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_40ayu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wbxx7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ayrs3")
}],
"loop": true,
"name": &"idle_top",
"speed": 7.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ly8av"]
radius = 6.0
height = 16.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_6vop5"]
radius = 8.0
height = 32.0

[sub_resource type="CircleShape2D" id="CircleShape2D_hlivc"]
radius = 8.0

[sub_resource type="Animation" id="Animation_fnhlc"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ShapeCast2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_cldyr"]
resource_name = "cast_right"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ShapeCast2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, -1.5708]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dln3j"]
_data = {
"RESET": SubResource("Animation_fnhlc"),
"cast_right": SubResource("Animation_cldyr")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_j2tdk"]

[node name="CosmicHorror" type="CharacterBody2D"]
script = ExtResource("1_kvkq0")
movement_speed = 50.0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_pxjcu")
animation = &"idle_top"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 6)
shape = SubResource("CapsuleShape2D_ly8av")

[node name="HurtBox" type="Area2D" parent="." node_paths=PackedStringArray("health")]
collision_layer = 2
collision_mask = 4
script = ExtResource("2_nbtsc")
health = NodePath("../Health")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(0, -2)
shape = SubResource("CapsuleShape2D_6vop5")
debug_color = Color(0.936817, 0.143797, 0.517988, 0.42)

[node name="Health" type="Node" parent="."]
script = ExtResource("3_sbwjy")

[node name="FiniteStateMachine" type="Node" parent="." node_paths=PackedStringArray("state")]
script = ExtResource("4_ios3j")
state = NodePath("WanderState")

[node name="WanderState" type="Node" parent="FiniteStateMachine" node_paths=PackedStringArray("cast", "navigation_agent")]
script = ExtResource("6_hpg0u")
cast = NodePath("../../ShapeCast2D")
navigation_agent = NodePath("../../NavigationAgent2D")

[node name="ChaseState" type="Node" parent="FiniteStateMachine" node_paths=PackedStringArray("cast", "navigation_agent")]
script = ExtResource("7_06yk8")
cast = NodePath("../../ShapeCast2D")
navigation_agent = NodePath("../../NavigationAgent2D")

[node name="ShapeCast2D" type="ShapeCast2D" parent="."]
shape = SubResource("CircleShape2D_hlivc")
target_position = Vector2(0, 48)
max_results = 31

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_dln3j")
}

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_desired_distance = 8.0
target_desired_distance = 8.0

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 4
script = ExtResource("8_2n6ja")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
shape = SubResource("CapsuleShape2D_j2tdk")
debug_color = Color(0.785583, 0.432773, 0, 0.42)

[connection signal="state_changed" from="FiniteStateMachine" to="." method="_on_finite_state_machine_state_changed"]
